# skills-test

./: .gitignore  CLAUDE.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml  results.schema.json  skill_ab_app.py  skill_ab_harness.py  skill_ab_server.py  skills_test.py  skills_test_app.py  skills_test_server.py  test_skill_ab_harness.py  test_skill_ab_server.py  test_skills_test.py  test_skills_test_server.py
.github/workflows/: lint-test.yml  skill-ab.yml  skills-test.yml
fixtures/: demo_skillab.toml
fixtures/demo_skill/: SKILL.md
plans/: 001-cli-config-front-door.md  002-reproducibility-manifest-and-schema.md  003-verdict-badge.md  004-html-report.md  005-demo-zero-setup.md  006-cost-power-preflight.md  007-judge-null-winrate-dashboard-crash.md  008-ci-lint-and-test-gate.md  009-html-report-data-shaping-tests.md  010-single-estimator-pass-consistent-cis.md  011-lock-down-blind-judge-tools.md  012-resume-dedupe-retried-cells.md  013-tooltip-escaping-roundtrip-xss.md  014-verdict-hero-honesty-gate.md  015-mde-bisection.md  016-judge-winrate-confidence-interval.md  017-remove-demo-live-noop-flag.md  018-small-hardening-and-polish.md  019-spike-offvsoff-noise-floor.md  020-spike-static-results-gallery.md  021-skill-ab-serve-local-app.md  022-spike-pluggable-cli-runner.md  023-serve-cost-ceiling.md  024-ux-upgrade.md  README.md
