[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-test"
version = "0.4.0"
description = "A/B test whether a Claude Code skill, model, or CLI improves agentic coding outcomes"
requires-python = ">=3.11"
dependencies = []  # stdlib only by design

[project.scripts]
# One command. The head-to-head one-liner is `skills-test quick A B TARGET`.
skills-test = "skill_ab_harness:main"

[tool.setuptools]
# The engine is one module (`skill_ab_harness`); the optional local app adds two
# more (`skill_ab_server` + `skill_ab_app`, imported lazily by `skills-test serve`).
# Module import names stay `skill_ab_*` (invisible to CLI users) so imports/tests
# don't churn; the distribution + command are `skills-test`.
# All fixtures/assets are embedded in-code so the wheel needs no data files.
py-modules = ["skill_ab_harness", "skill_ab_server", "skill_ab_app"]

[tool.ruff]
line-length = 100
