[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-test"
version = "0.4.0"
description = "A/B test whether a Claude Code skill, model, or CLI improves agentic coding outcomes"
requires-python = ">=3.11"
dependencies = []  # stdlib only by design

[project.scripts]
# One command. The head-to-head one-liner is `skills-test quick A B TARGET`.
skills-test = "skills_test:main"

[tool.setuptools]
# The engine is one module (`skills_test`); the optional local app adds two
# more (`skills_test_server` + `skills_test_app`, imported lazily by `skills-test serve`).
# All fixtures/assets are embedded in-code so the wheel needs no data files.
py-modules = ["skills_test", "skills_test_server", "skills_test_app"]

[tool.ruff]
line-length = 100
